解决admin模块bug